Master - moved command to commands
